Agent query: Is the Modern Markdown Viewer app running and displaying the new features, including dark mode toggle, file upload, and tabs for editing and preview?

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,10 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.11"
 streamlit = "^1.38.0"
+streamlit-option-menu = "^0.3.13"
+weasyprint = "^62.3"
+markdown = "^3.7"
+streamlit-ace = "^0.1.1"
 
 
 [build-system]
