--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,7 @@ streamlit-option-menu = "^0.3.13"
 weasyprint = "^62.3"
 markdown = "^3.7"
 streamlit-ace = "^0.1.1"
+pygments = "^2.18.0"
 
 
 [build-system]
